@@ -14,13 +14,13 @@ import com.plog.domain.project.repository.ProjectRepository;
 import com.plog.global.api.code.ErrorCode;
 import com.plog.global.api.error.EvaluationErrorCode;
 import com.plog.global.api.exception.ApiException;
+import com.plog.global.util.TimeUtil;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -30,14 +30,14 @@ public class EvaluationService {
     private final ProjectRepository projectRepository;
     private final ProjectMemberRepository projectMemberRepository;
     private final PeerEvaluationRepository peerEvaluationRepository;
+    private final EvaluationParticipantResolver participantResolver;
 
     public EvaluationTargetResponse getEvaluationTargets(Long projectId, Long userId) {
 
         Project project = projectRepository.findById(projectId)
                 .orElseThrow(() -> new ApiException(ErrorCode.NOT_FOUND));
 
-        ProjectMember currentMember = projectMemberRepository.findByProjectIdAndUserId(projectId, userId)
-                .orElseThrow(() -> new ApiException(ErrorCode.FORBIDDEN));
+        ProjectMember currentMember = participantResolver.requireEvaluator(projectId, userId);
 
         List<ProjectMember> allMembers = projectMemberRepository.findAllWithUserByProjectId(projectId);
 
@@ -54,22 +54,15 @@ public class EvaluationService {
                             .isEvaluated(isEvaluated)
                             .build();
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         return new EvaluationTargetResponse(targets);
     }
 
     public PeerEvaluationDetailResponse getPeerEvaluationDetail(Long projectId, Long targetMemberId, Long userId) {
 
-        ProjectMember evaluator = projectMemberRepository.findByProjectIdAndUserId(projectId, userId)
-                .orElseThrow(() -> new ApiException(ErrorCode.FORBIDDEN));
-
-        ProjectMember evaluatee = projectMemberRepository.findById(targetMemberId)
-                .orElseThrow(() -> new ApiException(ErrorCode.NOT_FOUND));
-
-        if (!evaluatee.getProject().getId().equals(projectId)) {
-            throw new ApiException(ErrorCode.FORBIDDEN);
-        }
+        ProjectMember evaluator = participantResolver.requireEvaluator(projectId, userId);
+        ProjectMember evaluatee = participantResolver.requireEvaluatee(projectId, targetMemberId);
 
         PeerEvaluation evaluation = peerEvaluationRepository.findByEvaluatorIdAndEvaluateeId(evaluator.getId(), targetMemberId)
                 .orElseThrow(() -> new ApiException(EvaluationErrorCode.EVALUATION_NOT_FOUND));
@@ -84,17 +77,10 @@ public class EvaluationService {
             Long userId,
             PeerEvaluationCreateRequest request) {
 
-        ProjectMember evaluator = projectMemberRepository.findByProjectIdAndUserId(projectId, userId)
-                .orElseThrow(() -> new ApiException(ErrorCode.FORBIDDEN));
+        ProjectMember evaluator = participantResolver.requireEvaluator(projectId, userId);
+        ProjectMember evaluatee = participantResolver.requireEvaluatee(projectId, targetMemberId);
 
-        ProjectMember evaluatee = projectMemberRepository.findById(targetMemberId)
-                .orElseThrow(() -> new ApiException(ErrorCode.NOT_FOUND));
-
-        if (!evaluatee.getProject().getId().equals(projectId)) {
-            throw new ApiException(ErrorCode.FORBIDDEN);
-        }
-
-        if (!evaluatee.getProject().isEvaluatingState()) {
+        if (!evaluatee.getProject().isEvaluatingState(TimeUtil.todayUtc())) {
             throw new ApiException(EvaluationErrorCode.NOT_EVALUATING_STATE);
         }
 
@@ -105,8 +91,6 @@ public class EvaluationService {
         if (peerEvaluationRepository.findByEvaluatorIdAndEvaluateeId(evaluator.getId(), evaluatee.getId()).isPresent()) {
             throw new ApiException(EvaluationErrorCode.ALREADY_EVALUATED);
         }
-
-        boolean isNudgeTriggered = checkNudgeCondition(request);
 
         PeerEvaluation evaluation = PeerEvaluation.builder()
                 .evaluator(evaluator)
@@ -122,10 +106,41 @@ public class EvaluationService {
 
         peerEvaluationRepository.save(evaluation);
 
-        return new PeerEvaluationCreateResponse(evaluation.getId(), isNudgeTriggered);
+        return new PeerEvaluationCreateResponse(evaluation.getId(), hasUniformScores(request));
     }
 
-    private boolean checkNudgeCondition(PeerEvaluationCreateRequest request) {
+    @Transactional
+    public PeerEvaluationCreateResponse updatePeerEvaluation(
+            Long projectId,
+            Long targetMemberId,
+            Long userId,
+            PeerEvaluationCreateRequest request
+    ) {
+        ProjectMember evaluator = participantResolver.requireEvaluator(projectId, userId);
+        ProjectMember evaluatee = participantResolver.requireEvaluatee(projectId, targetMemberId);
+
+        if (evaluatee.getProject().isCompleted()) {
+            throw new ApiException(EvaluationErrorCode.CANNOT_MODIFY_EVALUATION_AFTER_PUBLISH);
+        }
+
+        PeerEvaluation evaluation = peerEvaluationRepository
+                .findByEvaluatorIdAndEvaluateeId(evaluator.getId(), evaluatee.getId())
+                .orElseThrow(() -> new ApiException(EvaluationErrorCode.EVALUATION_NOT_FOUND));
+
+        evaluation.update(
+                request.collaborationScore(),
+                request.initiativeScore(),
+                request.responsibilityScore(),
+                request.communicationScore(),
+                request.outputScore(),
+                request.keywords(),
+                request.feedback()
+        );
+
+        return new PeerEvaluationCreateResponse(evaluation.getId(), hasUniformScores(request));
+    }
+
+    private boolean hasUniformScores(PeerEvaluationCreateRequest request) {
         int firstScore = request.collaborationScore();
         return firstScore == request.initiativeScore() &&
                 firstScore == request.responsibilityScore() &&
